# show_de_revisao

./: .gitignore  LICENSE  Makefile  README.md  config.json  display.html  index.html  package.json  perguntas.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
src/: app.css  display.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  game.rs  history.rs  lib.rs  main.rs
src/display/: AnswerOption.svelte  DisplayApp.svelte  GameOverScreen.svelte  HelpStatus.svelte  PrizeLadder.svelte  QuestionDisplay.svelte  TimerDisplay.svelte  UniversityHelp.svelte
src/lib/: api.ts  events.ts  sounds.ts  types.ts
src/presenter/: HelpControls.svelte  PresenterApp.svelte  PresenterControls.svelte  PresenterQuestion.svelte  TimerControl.svelte
