[package]
name = "show-de-questao"
version = "0.1.0"
description = "Quiz game inspired by Show do Milhão"
authors = ["Iago Souza"]
edition = "2021"

[lib]
name = "show_de_questao_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
